--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -21,8 +21,8 @@ font-1 = "Font Awesome 5 Free:style=Solid:size=12;1"
 font-2 = "Font Awesome 5 Brands:size=10;1"
 font-3 = "Hack Nerd Font:style=Regular:size=10;1"
 font-4 = "Font Awesome 5 Free:style=Solid:size=18;1"
-modules-left = i3 test
-modules-center = 
+modules-left = i3 
+; modules-center = breaktimer 
 modules-right = backlight xkeyboard battery pulseaudio date
 
 tray-position = right
@@ -624,13 +624,26 @@ bar-empty = ─
 [module/test]
 type = custom/script
 exec = node $HOME/.config/polybar/App.js
-; format-prefix = "Test Node "
-format-foreground = #BF616A
+format-foreground = #ECEFF4
 click-left = echo left >> $HOME/.config/polybar/events
 click-middle = echo middle >> $HOME/.config/polybar/events
 click-right = echo right >> $HOME/.config/polybar/events
 scroll-up = echo scrollUp >> $HOME/.config/polybar/events
 scroll-down = echo scrollDown >> $HOME/.config/polybar/events
+tail = true
+
+; Polybar Break Timer
+[module/breaktimer]
+type = custom/script
+format-prefix = "Break Timer "
+format-foreground = #ECEFF4
+exec = polybar-break-timer
+; exec = polybar-break-timer $HOME/.config/polybar/.env/break-timer 20
+click-left = echo left >> $HOME/.config/polybar/.env/break-timer
+click-middle = echo middle >> $HOME/.config/polybar/.env/break-timer
+click-right = echo right >> $HOME/.config/polybar/.env/break-timer
+scroll-up = echo scrollUp >> $HOME/.config/polybar/.env/break-timer
+scroll-down = echo scrollDown >> $HOME/.config/polybar/.env/break-timer
 tail = true
 
 [module/title]
