Add current path to tmux status right

--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -18,8 +18,7 @@ set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
 #+--- Bars ---+
 # 
 # 
-set -g status-left "#[fg=white,bg=brightblack,bold] #S \
-#[fg=black,bg=cyan,bold]#{?window_zoomed_flag,  ,}"
+set -g status-left "#[fg=white,bg=brightblack,bold] #S #[fg=#616E88,bg=#2e3440, bold] #{pane_current_path}"
 set -g status-right "#{prefix_highlight}#[fg=#616E88,bg=#2e3440, bold] #(whoami)@#h #[fg=white,bg=brightblack,bold] %Y-%m-%d ${NORD_TMUX_STATUS_TIME_FORMAT} "
 
 #+--- Windows ---+
