--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,8 +98,8 @@ set-option -g visual-activity off
 # Show/Hide Status
 bind-key q set-option status
 
-set -g status-left-length 60
-set -g status-right-length 60
+# set -g status-left-length 60
+# set -g status-right-length 120
 set -g status-justify centre
 set -g @nord_tmux_show_status_content "1"
 set -g @nord_tmux_no_patched_font "1"
