Add vim-fasd plugin

--- a/.tmux/plugins/nord-tmux/src/nord.conf
+++ b/.tmux/plugins/nord-tmux/src/nord.conf
@@ -9,9 +9,8 @@
 #+ Plugin Support +
 #+----------------+
 #+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_fg black
-set -g @prefix_highlight_bg brightcyan
-
+set -g @prefix_highlight_fg "#2e3440"
+set -g @prefix_highlight_bg "#88C0D0"
 #+---------+
 #+ Options +
 #+---------+
@@ -22,7 +21,7 @@ set -g status on
 #+ Status +
 #+--------+
 #+--- Layout ---+
-# set -g status-justify left
+set -g status-justify left
 
 #+--- Colors ---+
 set -g status-bg "#2e3440"
