--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 ############
 ## Bindings ##
 ##############
@@ -19,8 +18,6 @@ bind D resize-pane -D 8
 unbind '"'
 unbind %
 
-# setw -g automatic-rename-format "#{b:pane_current_path}"
-
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
@@ -31,12 +28,12 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # Use Shift + arrow key to move between windows in a session
-bind -n S-Left next-window
-bind -n S-Right previous-window
+# bind -n S-Right next-window
+# bind -n S-Left previous-window
 
 # Open ~/.tmux.conf in vim and reload settings on quit
-unbind e
-bind e new-window -n '~/.tmux.conf' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf'"
+# unbind h
+bind h new-window -n '~/.tmux.conf' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf'"
 
 # use r to quickly reload tmux settings
 unbind r
@@ -44,7 +41,7 @@ bind r \
         source-file ~/.tmux.conf \;\
         display 'Reloaded tmux config'
 
-# use a to toggle synchronize panes
+# use e to toggle synchronize panes
 bind e set-window-option synchronize-panes
 
 # Prefix + / to search
@@ -101,9 +98,8 @@ set-option -g visual-activity off
 # Show/Hide Status
 bind-key q set-option status
 
-set -g status-left-length 60
-set -g status-right-length 60
-set -g status-justify centre
+set -g status-left-length 100
+set -g status-right-length 100
 set -g @nord_tmux_show_status_content "1"
 set -g @nord_tmux_no_patched_font "1"
 
@@ -125,9 +121,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # Prefix_highlight options
 # set -g status-left '#{prefix_highlight}'
 set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=purple' # default is 'fg=default,bg=yellow'
+set -g @prefix_highlight_copy_mode_attr 'fg=#2e3440,bg=#B48EAD' # default is 'fg=default,bg=yellow'
 set -g @prefix_highlight_show_sync_mode 'on'
-set -g @prefix_highlight_sync_mode_attr 'fg=black,bg=red' # default is 'fg=default,bg=yellow'
+set -g @prefix_highlight_sync_mode_attr 'fg=#2e3440,bg=#bf616a' # default is 'fg=default,bg=yellow'
 # set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'jatap/tmux-base16-statusline'
 # set -g @plugin 'odedlaz/tmux-onedark-theme'
@@ -141,11 +137,6 @@ set -g @continuum-restore 'off'
 ###################
 ## CUSTOMIZATION ## 
 ###################
-
-###############
-## nord-tmux ##
-###############
-
 
 ##################
 ## tmux-onedark ##
