changed dotfiles to config alias + some tmux stuff

--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -1,22 +1,24 @@
-# Copyright (C) 2017-present Arctic Ice Studio <development@arcticicestudio.com>l
+# Copyright (C) 2017-present Arctic Ice Studio <development@arcticicestudio.com>
 # Copyright (C) 2017-present Sven Greb <development@svengreb.de>
 
 # Project:    Nord tmux
 # Repository: https://github.com/arcticicestudio/nord-tmux
 # License:    MIT
 
+#+----------------+
+#+ Plugin Support +
+#+----------------+
+#+--- tmux-prefix-highlight ---+
+set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
+
 #+--------+
 #+ Status +
 #+--------+
-# CPU Load -> #(cat /proc/loadavg || cut -d \"\" -f 1,2,3)
 #+--- Bars ---+
-# 
-# 
-set -g status-right "#{prefix_highlight}#[fg=#616e88,bg=#2e3440,bold] #{pane_current_path}"
-# set -g status-right "#{prefix_highlight}#[fg=#616E88,bg=#2e3440, bold] #[fg=#616E88,bg=#2e3440,bold] %Y-%m-%d ${NORD_TMUX_STATUS_TIME_FORMAT} "
-set -g status-left ""
+set -g status-left "#[fg=black,bg=blue,bold] #S "
+set -g status-right "#{prefix_highlight}#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,bold] #H "
 
 #+--- Windows ---+
-set -g window-status-format " #[fg=#616E88,bg=#2e3440, bold]#{b:pane_current_path}>#W"
-set -g window-status-current-format " #[fg=#88c0d0,bg=#2e3440, bold]#{b:pane_current_path}>#[fg=#b48ead, bold]#W"
+set -g window-status-format " #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack]#W #F"
+set -g window-status-current-format " #[fg=black,bg=cyan]#I#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F"
 set -g window-status-separator ""
