--- a/.tmux/plugins/nord-tmux/src/nord.conf
+++ b/.tmux/plugins/nord-tmux/src/nord.conf
@@ -9,8 +9,9 @@
 #+ Plugin Support +
 #+----------------+
 #+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_fg "#2e3440"
-set -g @prefix_highlight_bg "#88C0D0"
+set -g @prefix_highlight_fg black
+set -g @prefix_highlight_bg brightcyan
+
 #+---------+
 #+ Options +
 #+---------+
@@ -24,17 +25,13 @@ set -g status on
 set -g status-justify left
 
 #+--- Colors ---+
-set -g status-bg "#2e3440"
-set -g status-fg white
-set -g status-attr none
+set -g status-style bg=black,fg=white
 
 #+-------+
 #+ Panes +
 #+-------+
-set -g pane-border-bg black
-set -g pane-border-fg black
-set -g pane-active-border-bg black
-set -g pane-active-border-fg brightblack
+set -g pane-border-style bg=default,fg=brightblack
+set -g pane-active-border-style bg=default,fg=blue
 set -g display-panes-colour black
 set -g display-panes-active-colour brightblack
 
@@ -46,7 +43,5 @@ setw -g clock-mode-colour cyan
 #+----------+
 #+ Messages +
 #+---------+
-set -g message-fg cyan
-set -g message-bg brightblack
-set -g message-command-fg cyan
-set -g message-command-bg brightblack
+set -g message-style bg=brightblack,fg=cyan
+set -g message-command-style bg=brightblack,fg=cyan
