--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,8 +113,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-# set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
@@ -141,15 +142,15 @@ set -g @continuum-restore 'off'
 ####################
 ## tnux-powerline ##
 ####################
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-set-option -g status-left "#(~/Config/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/Config/tmux-powerline/powerline.sh right)"
-set-hook -g session-created 'run-shell "~/Config/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
-
+# set-option -g status on
+# set-option -g status-interval 2
+# set-option -g status-justify "centre"
+# set-option -g status-left-length 60
+# set-option -g status-right-length 90
+# set-option -g status-left "#(~/Config/tmux-powerline/powerline.sh left)"
+# set-option -g status-right "#(~/Config/tmux-powerline/powerline.sh right)"
+# set-hook -g session-created 'run-shell "~/Config/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
+# 
 ##################
 ## tmux-onedark ##
 ##################
