Add battery status in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,6 +106,15 @@ set -g @nord_tmux_no_patched_font "0"
 #############
 ## Plugins ##
 #############
+##################
+## tmux-battery ##
+##################
+
+set -g @batt_icon_status_charged ''
+set -g @batt_icon_status_charging ''
+set -g @batt_icon_status_discharging '' 
+set -g @batt_icon_status_attached ''
+set -g @batt_icon_status_unknown '' 
 
 # List of Plugins 
 set -g @plugin 'tmux-plugins/tpm'
@@ -113,11 +122,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'arcticicestudio/nord-tmux'
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Prefix_highlight options
 # set -g status-left '#{prefix_highlight}'
@@ -150,7 +159,17 @@ set -g @continuum-restore 'off'
 # set-option -g status-left "#(~/Config/tmux-powerline/powerline.sh left)"
 # set-option -g status-right "#(~/Config/tmux-powerline/powerline.sh right)"
 # set-hook -g session-created 'run-shell "~/Config/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
-# 
+
+##################
+## tmux-battery ##
+##################
+
+set -g @batt_icon_status_charged ''
+set -g @batt_icon_status_charging ''
+set -g @batt_icon_status_discharging ''
+set -g @batt_icon_status_attached ''
+set -g @batt_icon_status_unknown '' 
+
 ##################
 ## tmux-onedark ##
 ##################
