--- a/.tmux/plugins/nord-tmux/src/nord-status-content.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content.conf
@@ -18,9 +18,8 @@ set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
 #+--------+
 #+--- Bars ---+
 set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M #{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #{pane_current_path} "
+set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT}#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#[fg=cyan,bg=black]#[fg=black,bg=cyan] #{battery_icon_status} #{battery_percentage} #[fg=black,bg=cyan,nobold,noitalics,nounderscore]#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=black,bg=blue,bold]  #{pane_current_path} "
 
-#+--- Windows ---+
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#{b:pane_current_path} #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
+#+--- Windows ---blue -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#{b:pane_current_path} #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#{b:pane_current_path} #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
 set -g window-status-separator ""
