Change locale + battery status in tmux status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -170,6 +170,28 @@ set -g @batt_icon_status_discharging ''
 set -g @batt_icon_status_attached ''
 set -g @batt_icon_status_unknown '' 
 
+set -g @batt_color_charge_primary_tier8 '#88C0D0'
+set -g @batt_color_charge_primary_tier7 '#88C0D0'
+set -g @batt_color_charge_primary_tier6 '#88C0D0'
+set -g @batt_color_charge_primary_tier5 '#88C0D0'
+set -g @batt_color_charge_primary_tier4 '#EBCB8B'
+set -g @batt_color_charge_primary_tier3 '#EBCB8B'
+set -g @batt_color_charge_primary_tier2 '#bf616a'
+set -g @batt_color_charge_primary_tier1 '#bf616a'
+
+# set -g @batt_color_charge_secondary_tier2 '#ECEFF4'
+# set -g @batt_color_charge_secondary_tier1 '#ECEFF4'
+
+ 
+
+set -g @batt_icon_charge_tier8 ''
+set -g @batt_icon_charge_tier7 ''
+set -g @batt_icon_charge_tier6 ''
+set -g @batt_icon_charge_tier5 ''
+set -g @batt_icon_charge_tier4 ''
+set -g @batt_icon_charge_tier3 ''
+set -g @batt_icon_charge_tier2 ''
+set -g @batt_icon_charge_tier1 ''
 ##################
 ## tmux-onedark ##
 ##################
