prefix_highlight + nord-status-content.conf DONE

--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -9,16 +9,24 @@
 #+ Plugin Support +
 #+----------------+
 #+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
+set -g @prefix_highlight_fg 'black, bold' # default is 'colour231'
+set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+
+set -g @prefix_highlight_copy_prompt " copy"
+set -g @prefix_highlight_copy_mode_attr "fg=black,bold,bg=yellow"
+
+set -g @prefix_highlight_sync_prompt "痢sync"
+set -g @prefix_highlight_sync_mode_attr "fg=white,bold,bg=red"
 
 #+--------+
 #+ Status +
 #+--------+
 #+--- Bars ---+
-set -g status-left "#[fg=black,bg=blue,bold] #S "
-set -g status-right "#{prefix_highlight}#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] ${NORD_TMUX_STATUS_TIME_FORMAT} #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,bold] #H "
+#set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S "
+set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack,bold]  #{pane_current_path} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#{battery_color_charge_bg} #{battery_icon_charge}  #{battery_percentage} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bold,bg=blue] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=black,bg=blue,nobold,noitalics,nounderscore]| #[fg=black, bold,bg=blue]${NORD_TMUX_STATUS_TIME_FORMAT} "
 
 #+--- Windows ---+
-set -g window-status-format " #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack]#W #F"
-set -g window-status-current-format " #[fg=black,bg=cyan]#I#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F"
+set -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=brightblack]#{b:pane_current_path} #F #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g window-status-current-format "#[fg=black,bg=cyan] #I #[fg=black,bg=cyan]#{b:pane_current_path} #F #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
 set -g window-status-separator ""
