--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -9,24 +9,24 @@
 #+ Plugin Support +
 #+----------------+
 #+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_fg 'black, bold' # default is 'colour231'
-set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+set -g @prefix_highlight_fg 'black, nobold' # default is 'colour231'
+set -g @prefix_highlight_bg 'cyan'  # default is 'colour04'
 
 set -g @prefix_highlight_copy_prompt " copy"
-set -g @prefix_highlight_copy_mode_attr "fg=black,bold,bg=yellow"
+set -g @prefix_highlight_copy_mode_attr "fg=black,nobold,bg=yellow"
 
 set -g @prefix_highlight_sync_prompt "痢sync"
-set -g @prefix_highlight_sync_mode_attr "fg=white,bold,bg=red"
+set -g @prefix_highlight_sync_mode_attr "fg=white,nobold,bg=red"
 
 #+--------+
 #+ Status +
 #+--------+
 #+--- Bars ---+
 #set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S "
-set -g status-left "#[fg=blue,bg=blue]|#[fg=black,bg=blue]ﲾ #[fg=black,bg=blue,bold]#S #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
-set -g status-right "#{prefix_highlight}#[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack,bold]  #{pane_current_path} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#{battery_color_charge_bg} #{battery_icon_charge}  #{battery_percentage} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bold,bg=blue] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=black,bg=blue,bold,noitalics,nounderscore]${NORD_TMUX_STATUS_TIME_FORMAT} "
+set -g status-left "#[fg=blue,bg=blue]|#[fg=black,bg=blue]ﲾ #[fg=black,bg=blue,nobold]#S #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack,bold]  #{pane_current_path} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#{battery_color_charge_bg} #{battery_icon_charge}  #{battery_percentage} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,nobold,bg=blue] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=black,bg=blue,nobold,noitalics,nounderscore]${NORD_TMUX_STATUS_TIME_FORMAT} "
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=brightblack]#{b:pane_current_path} #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
-set -g window-status-current-format "#[fg=black,bg=cyan,bold] #I #[fg=black,bg=cyan,bold]#{b:pane_current_path} #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=brightblack]#W #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g window-status-current-format "#[fg=black,bg=cyan,nobold] #I #[fg=black,bg=cyan,nobold]#W #[fg=black,bg=cyan,nobold] #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
 set -g window-status-separator ""
