--- a/.tmux.conf
+++ b/.tmux.conf
@@ -119,6 +119,7 @@ set -g @batt_icon_status_unknown ''
 # List of Plugins 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-cpu'
@@ -175,7 +176,9 @@ set -g @batt_color_charge_primary_tier5 '#88C0D0'
 set -g @batt_color_charge_primary_tier4 '#EBCB8B'
 set -g @batt_color_charge_primary_tier3 '#EBCB8B'
 set -g @batt_color_charge_primary_tier2 '#bf616a'
+set -g @batt_color_charge_secondary_tier2 'white'
 set -g @batt_color_charge_primary_tier1 '#bf616a'
+set -g @batt_color_charge_secondary_tier1 'white'
 
 # set -g @batt_color_charge_secondary_tier2 '#ECEFF4'
 # set -g @batt_color_charge_secondary_tier1 '#ECEFF4'
