--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -23,10 +23,10 @@ set -g @prefix_highlight_sync_mode_attr "fg=white,nobold,bg=red"
 #+--------+
 #+--- Bars ---+
 #set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S "
-set -g status-left "#[fg=blue,bg=blue]|#[fg=black,bg=blue]ﲾ #[fg=black,bg=blue,bold]#S #[fg=#2E3440,bg=#2E3440,nobold,noitalics,nounderscore]|"
+set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
 set -g status-right "#{prefix_highlight}#[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack,bold]  #{pane_current_path} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#{battery_color_charge_bg} #{battery_icon_charge}  #{battery_percentage} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bold,bg=blue] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=black,bg=blue,bold,noitalics,nounderscore]${NORD_TMUX_STATUS_TIME_FORMAT} "
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=white,bg=brightblack,nobold] #I #[fg=white,bg=brightblack,nobold]#W #{?window_zoomed_flag,  ,}#[fg=#2E3440,bg=#2E3440,nobold,noitalics,nounderscore]|"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold] #I #[fg=black,bg=cyan,nobold]#W #{?window_zoomed_flag,  ,}#[fg=#2E3440,bg=#2E3440,nobold,noitalics,nounderscore]|"
+set -g window-status-format "#[fg=white,bg=brightblack,nobold] #I #[fg=white,bg=brightblack,nobold]#W #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g window-status-current-format "#[fg=black,bg=cyan,nobold] #I #[fg=black,bg=cyan,nobold]#W #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
 set -g window-status-separator ""
