--- a/.tmux/plugins/nord-tmux/src/nord.conf
+++ b/.tmux/plugins/nord-tmux/src/nord.conf
@@ -22,7 +22,7 @@ set -g status on
 set -g status-justify left
 
 #+--- Colors ---+
-set -g status-style bg=#2E3440,fg=white
+set -g status-style bg=black,fg=white
 
 #+-------+
 #+ Panes +
