last known configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,7 +115,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'dracula/tmux'
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
@@ -138,6 +139,18 @@ set -g @continuum-restore 'off'
 ###################
 ## CUSTOMIZATION ## 
 ###################
+
+##################
+## dracula-tmux ##
+##################
+
+# available plugins: battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+set -g @dracula-show-flags true
+set -g @dracula-plugins "cpu-usage time"
+set -g @dracula-show-timezone false
+set -g @dracula-day-month false
+set -g @dracula-military-time true
+
 
 ###############
 ## nord-tmux ##
@@ -183,5 +196,5 @@ set -g @continuum-restore 'off'
 # set -g @base16-statusline 'main'
 
 # clone TPM https://github.com/tmux-plugins/tpm ,then:
-run -b '~/.tmux/plugins/tpm/tpm'
+run  '~/.tmux/plugins/tpm/tpm'
 
