Change Tmux status colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,7 @@ bind-key C-a last-window
 # Bind D to resize the window to be 8 lines smaller
 bind D resize-pane -D 8
 
+set -g mouse on
 # Use | and - to split a window vertically and horizontally instead of " and % respoectively
 unbind '"'
 unbind %
@@ -170,15 +171,21 @@ set -g @batt_icon_status_attached ''
 set -g @batt_icon_status_unknown '' 
 
 set -g @batt_color_charge_primary_tier8 '#88C0D0'
+set -g @batt_color_charge_secondary_tier8 '#2E3440'
 set -g @batt_color_charge_primary_tier7 '#88C0D0'
+set -g @batt_color_charge_secondary_tier7 '#2E3440'
 set -g @batt_color_charge_primary_tier6 '#88C0D0'
+set -g @batt_color_charge_secondary_tier6 '#2E3440'
 set -g @batt_color_charge_primary_tier5 '#88C0D0'
+set -g @batt_color_charge_secondary_tier5 '#2E3440'
 set -g @batt_color_charge_primary_tier4 '#EBCB8B'
+set -g @batt_color_charge_secondary_tier4 '#2E3440'
 set -g @batt_color_charge_primary_tier3 '#EBCB8B'
+set -g @batt_color_charge_secondary_tier3 '#2E3440'
 set -g @batt_color_charge_primary_tier2 '#bf616a'
-set -g @batt_color_charge_secondary_tier2 'white'
+set -g @batt_color_charge_secondary_tier2 '#2E3440'
 set -g @batt_color_charge_primary_tier1 '#bf616a'
-set -g @batt_color_charge_secondary_tier1 'white'
+set -g @batt_color_charge_secondary_tier1 '#2E3440'
 
 # set -g @batt_color_charge_secondary_tier2 '#ECEFF4'
 # set -g @batt_color_charge_secondary_tier1 '#ECEFF4'
