--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -9,24 +9,24 @@
 #+ Plugin Support +
 #+----------------+
 #+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_fg 'black, nobold' # default is 'colour231'
-set -g @prefix_highlight_bg 'brightcyan'  # default is 'colour04'
+set -g @prefix_highlight_fg 'brightcyan, bold' # default is 'colour231'
+set -g @prefix_highlight_bg '#2E3440'  # default is 'colour04'
 
 set -g @prefix_highlight_copy_prompt " copy"
-set -g @prefix_highlight_copy_mode_attr "fg=black,nobold,bg=yellow"
+set -g @prefix_highlight_copy_mode_attr "fg=yellow,bold,bg=#2E3440"
 
 set -g @prefix_highlight_sync_prompt "痢sync"
-set -g @prefix_highlight_sync_mode_attr "fg=white,nobold,bg=red"
+set -g @prefix_highlight_sync_mode_attr "fg=red,bold,bg=#2E3440"
 
 #+--------+
 #+ Status +
 #+--------+
 #+--- Bars ---+
 #set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S "
-set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=black,bg=black,nobold,noitalics,nounderscore]|"
-set -g status-right "#{prefix_highlight}#[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack,bold]  #{pane_current_path} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bg=brightblack,nobold,noitalics,nounderscore]#{battery_color_charge_bg} #{battery_icon_charge}  #{battery_percentage} #[fg=black,bg=black,nobold,noitalics,nounderscore]|#[fg=black,bold,bg=blue] ${NORD_TMUX_STATUS_DATE_FORMAT} #[fg=black,bg=blue,bold,noitalics,nounderscore]${NORD_TMUX_STATUS_TIME_FORMAT} "
+set -g status-left "#[fg=#5E81AC,bg=#2E3440,nobold]   #[bold]#S "
+set -g status-right "#{prefix_highlight}#[fg=#616E88,bg=#2E3440,bold] #{pane_current_path}#{battery_color_charge_fg} #{battery_percentage} #[fg=cyan,bg=#2E3440,bold]${NORD_TMUX_STATUS_TIME_FORMAT}"
 
 #+--- Windows ---+
-set -g window-status-format "#[fg=white,bg=brightblack,nobold] #I #[fg=white,bg=brightblack,nobold]#W #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold] #I #[fg=black,bg=cyan,nobold]#W #{?window_zoomed_flag,  ,}#[fg=black,bg=black,nobold,noitalics,nounderscore]|"
+set -g window-status-format "#[fg=#616E88,bg=#2E3440,nobold] #I #[fg=#616E88,bg=#2E3440,nobold]#W"
+set -g window-status-current-format "#[fg=cyan,bg=#2E3440,nobold] #I #[fg=brightcyan,bg=#2E3440,nobold]#{pane_current_command}#[fg=cyan,bg=#2E3440,bold]/#{b:pane_current_path} #{?window_zoomed_flag,  ,}"
 set -g window-status-separator ""
