--- a/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
+++ b/.tmux/plugins/nord-tmux/src/nord-status-content-no-patched-font.conf
@@ -24,8 +24,8 @@ set -g @prefix_highlight_sync_mode_attr "fg=red,bold,bg=#2E3440"
 #+--- Bars ---+
 #set -g status-left "#[fg=black,bg=blue,bold] ﲾ #S "
 set -g status-left "#[fg=#5E81AC,bg=#2E3440,nobold]   #[bold]#S "
-set -g status-right "#{prefix_highlight}#[fg=#616E88,bg=#2E3440,bold] #{pane_current_path}#{battery_color_charge_fg} #{battery_percentage} #[fg=cyan,bg=#2E3440,bold]${NORD_TMUX_STATUS_TIME_FORMAT}"
-
+set -g status-right "#{prefix_highlight}#[fg=#616E88,bg=#2E3440,bold] #{d:pane_current_path}#{battery_color_charge_fg} #{battery_percentage} #[fg=cyan,bg=#2E3440,bold]${NORD_TMUX_STATUS_TIME_FORMAT}"
+k
 #+--- Windows ---+
 set -g window-status-format "#[fg=#616E88,bg=#2E3440,nobold] #I #[fg=#616E88,bg=#2E3440,nobold]#W"
 set -g window-status-current-format "#[fg=cyan,bg=#2E3440,nobold] #I #[fg=brightcyan,bg=#2E3440,nobold]#{pane_current_command}#[fg=cyan,bg=#2E3440,bold]/#{b:pane_current_path} #{?window_zoomed_flag,  ,}"
